# mix-db

./: .gitignore
mix-alchemy/: Cargo.toml
mix-alchemy/migrations/2023-11-10-022457_create_mixes/: down.sql  up.sql
mix-alchemy/src/: controller.rs  database.rs  main.rs  models.rs  schema.rs  templates.rs  web.rs
mix-alchemy/src/templates/: base.html  index.html  mix_designs.html
