[package]
name = "mix-alchemy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = { version = "0.4.2", features = ["serde"] }
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.0.0", features = ["mysql", "chrono", "bigdecimal", "serde_json"] }
dotenvy = "0.15"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
